# bevy_jam_05

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yaml
assets/models/: Robot.gltf
src/: assets_loading.rs  camera.rs  common.rs  custom_default_plugin.rs  debug.rs  gameplay.rs  infrastructure.rs  input.rs  lib.rs  main.rs  physics.rs  prelude.rs  ui.rs
src/common/: constants.rs  order.rs  utils.rs
src/common/utils/: extensions.rs
src/gameplay/: game_loop.rs  movement.rs  player.rs
src/gameplay/player/: spawn.rs
src/infrastructure/: app_state.rs
src/input/: binds.rs  events.rs  movement.rs  pause.rs
src/physics/: bundles.rs
src/ui/: common.rs  create.rs  gameplay_hud.rs  main_menu.rs
src/ui/common/: colors.rs  interactions.rs  styles.rs  z_index.rs
src/ui/gameplay_hud/: pause_menu.rs
