[package]
name = "bevy_jam_05"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14"
bevy_asset_loader = { version = "0.21", features = ["3d"] }
bevy_gltf_components = "0.6"
bevy_rapier3d = "0.27"
bevy_registry_export = "0.4"
bevy_third_person_camera = { version = "0.1.11", git = "https://github.com/rapushka/bevy_third_person_camera.git" }

